--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,4 +18,4 @@ jobs:
           fetch-depth: 1
 
       - name:          run tests
-        run:           apt-get install graphviz && make pytest
+        run:           sudo apt-get -y install graphviz && make pytest
