--- a/ruff.toml
+++ b/ruff.toml
@@ -22,6 +22,7 @@ exclude = [
 line-length = 90
 indent-width = 4
 target-version = "py310"
+extend-include = ["*.ipynb"]
 
 [lint]
 select = ["E4", "E7", "E9", "F"]
