--- a/ruff.toml
+++ b/ruff.toml
@@ -17,6 +17,9 @@ exclude = [
     "profile.html",
     "profile.json",
     "*.log",
+    "notes",
+    "bench",
+    "benchmark",
 ]
 
 line-length = 90
