--- a/ruff.toml
+++ b/ruff.toml
@@ -17,6 +17,7 @@ exclude = [
     "profile.html",
     "profile.json",
     "*.log",
+    "bench/spider-eval"
 ]
 
 line-length = 90
@@ -26,7 +27,7 @@ extend-include = ["*.ipynb"]
 
 [lint]
 select = ["E4", "E7", "E9", "F"]
-ignore = []
+ignore = ["E731", "E701", "F401", "E741", "E743"]
 fixable = ["ALL"]
 unfixable = []
 
