--- a/ruff.toml
+++ b/ruff.toml
@@ -17,7 +17,7 @@ exclude = [
     "profile.html",
     "profile.json",
     "*.log",
-    "bench/spider-eval"
+    "bench/spider-eval/*"
 ]
 
 line-length = 90
