--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,5 +4,5 @@ repos:
     hooks:
       - id: ruff
         types_or: [ "python", "pyi", "jupyter" ]
-        args: [ "--fix", "--exit-zero" ]
+        args: [ "--fix" ]
       - id: ruff-format
