--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      name: Check out repository
-    - uses: actions/checkout@v4
+    - name: Check out repository
+      uses: actions/checkout@v4
    
     - name: Install dependencies
       run: |
