Rerun the action on push to the mkdoc_branch instead of on PR.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,13 @@
-name:                  Docs
+name:                  Doc
 
 on:
   push:
     branches:
       - main
+      - mkdocs_branch
   pull_request:
     branches:
-      - mkdocs_branch
+
 
 permissions:
   contents: write
