--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: GenParse Docs
 nav:
   - Home: index.md
+  - Getting Started: getting_started.md
   - Usage Guide: usage_guide.md
   - API Documentation: api/index.html
   - Contributing: contributing.md
