--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,9 @@ site_name: GenParse Docs
 nav:
   - Home: index.md
   - Getting Started: getting_started.md
-  - Usage Guide: usage_guide.md
   - API Documentation: api/index.html
   - Contributing: contributing.md
   - Troubleshooting: troubleshooting.md
 theme: 
+plugins:
+  - include-markdown
