Updated the NOTICE and README file will all of the license of our dependencies - this should be double checked by someone else as well. Also switched to using the material theme for mkdocs.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - API Documentation: api/index.html
   - Contributing: contributing.md
   - Troubleshooting: troubleshooting.md
-theme: 
+theme:
+  name: material
 plugins:
   - include-markdown
