Installing mkdocs material broke the symlink between the readme and the docs index. After trying several other plugins which didn't work I switched to using symbolic linking. This doensn't work on Windows, but I added a note in the readme for Windows folks. This seems to be the recommended solution by the mkdocs folks: https://github.com/mkdocs/mkdocs/issues/1250.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,5 +7,5 @@ nav:
   - Troubleshooting: troubleshooting.md
 theme:
   name: material
-plugins:
-  - include-markdown
+  palette:
+    scheme: slate
