--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v4
 
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.11.5
+        cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m venv venv
